# Capy-Messenger

./: .clang-format  .gitignore  CMakeLists.txt  Setup.bat  conanfile.py
Backend/: CMakeLists.txt  main.cpp
Backend/Core/: CMakeLists.txt
Backend/Core/Ports/Secondary/Logger/Interfaces/: BaseLoggerMessage.h
Backend/Core/Ports/Secondary/Logger/MessageTypes/: BaseLoggerMessage.cpp  BaseLoggerMessage.h  TechLogMessage.cpp  TechLogMessage.h
Backend/Core/Ports/Secondary/Logger/Utils/: LoggerUtils.cpp  LoggerUtils.h
Backend/TestLayout/: TestClass.cpp  TestClass.h
Backend/Tests/: CMakeLists.txt  test_main.cpp
Backend/Tests/Core/Ports/Secondary/Logger/: LoggerMessageTestsClass.cpp  LoggerMessageTestsClass.h
Backend/Tests/Utils/Exceptions/: BaseFormattedExceptionTests.cpp  BaseFormattedExceptionTests.h
Backend/Utils/: CMakeLists.txt
Backend/Utils/Exceptions/: BaseFormattedException.h
Tools/Format/: copyright.py  core_utils.py  format.bat  git_usage.py  inspection.py  python_format.py  requirements.txt  requirements_worker.py  setup.bat  setup.py
Tools/Scripts/: setup_linux.sh
